# dell-charger-emulator

./: CMakeLists.txt  Makefile  README.md  dell-charger-data-editor.py  eeprom-data.hex  main.c
dsview/: dell-origin.dsl  dell_emit_atmega328p.dsl
